cncProd/force-app/main/default/objects/BatchDataPool__c/BatchDataPool__c.object-meta.xml
<CustomObject>
    <label>Batch Data Pool</label>
    <nameField>
        <label>Batch Data  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Data Pool</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>