cncProd/force-app/main/default/objects/BatchDataPool__c/fields/Batches_Processed__c.field-meta.xml
<CustomField>
    <fullName>Batches_Processed__c</fullName>
    <label>Batches Processed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>