cncProd/force-app/main/default/objects/BatchDataPool__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Batch_Name__c</columns>
    <columns>Job_Status__c</columns>
    <columns>Failures__c</columns>
    <columns>Batches_Processed__c</columns>
    <columns>Total_Batches__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>